@@ -1,3 +1,7 @@
+2010-02-02  Dominique Dumont  <dominique.dumont@hp.com>
+
+	* demo/demo.pl (my_system): new demo (requires Config::Model::Itself)
+
 2010-01-24  Dominique Dumont  <domi.dumont@free.fr>
 
 	* lib/Config/Model/models/Ssh/PortForward.pl: host and hostport are mandatory
